fix: small UI fixes for the sticky Tabs header on smaller screens + drawer content collapsing on smaller screens + better handling of Nav link cleanup when changing pages

--- a/packages/uikit-workshop/src/sass/scss/04-components/_pattern-info.scss
+++ b/packages/uikit-workshop/src/sass/scss/04-components/_pattern-info.scss
@@ -54,7 +54,7 @@
  */
 .pl-c-pattern-info__panel {
   padding: .5rem;
-  flex-shrink: 1;
+  flex-shrink: 0; // prevent panel from collapsing in height (especially on smaller screens like iPhone)
   display: flex;
   flex-direction: column;
 
